<resources>
    <string name="app_name">Examen</string>
    <string name="logo">logo principal</string>

    <string name="eslogan"> If you are talking authentic Mexican food, than we speak your language.</string>
    <string name="menu"> Menu</string>

    <string name="tacos">Tacos</string>

    <string name="tacoT">Taco Tradicional</string>
    <string name="tacoT_desc">Traditional Taco (1)</string>

    <string name="tacoP">Taco de Pescado</string>
    <string name="tacoP_desc">Fish Taco (1)</string>

    <string name="asada">Asada/Beef Steak</string>
    <string name="pollo">Pollo/Chicken</string>
    <string name="carnitas">Carnitas/Pulled Pork</string>
    <string name="chorizo">Chorizo/Mexican Sausage</string>
    <string name="suadero">Suadero/Shreedded Beef</string>
    <string name="buche">Buche/Pork Stomach</string>
    <string name="pastor">Al Pastor/Marinated Pork</string>
    <string name="cachete">Cachete/Beef Cheek</string>
    <string name="barbacoa">Barbacoa/BBQ</string>
    <string name="tripa">Tripa/Beef Intestine</string>
    <string name="chicharron">Chicharrón/Pork Rinds</string>
    <string name="cueritos">Cueritos/Pork Skin</string>
    <string name="lengua">Lengua</string>

    <string name="rice">Rice</string>
    <string name="beans">Beans</string>
    <string name="quesoM">Queso Mozzarella</string>
    <string name="quesoF">Queso Fresco</string>

    <string name="small">Small</string>
    <string name="Medium">Medium</string>
    <string name="Large">Largue</string>

    <string name="antojitos">Antojitos</string>

    <string name="quesadilla">Quesadillas</string>
    <string name="quesadilla_desc">Rellenas con su carne favorita, servidas con ensalada. Filled with your choice of meat, served with salad.</string>

    <string name="huaraches">Huaraches</string>
    <string name="huaraches_desc">Tortilla gruesa con frijoles, tu carne favorita, lechuga, queso fresco y crema. Big Thick tortilla with beans, your choice of meat, fresh cheese, and sour cream.</string>

    <string name="gringas">Gringas</string>
    <string name="gringas_desc">Tortilla de harina con queso, carne al pastor y piña Flour tortilla with cheese marinated pork and pineapple.</string>

    <string name="sincronizadas">Sincronzadas</string>
    <string name="sincronizadas_desc">Tortilla de harina rellena con queso y jamon. Se sirve con lechuga, crema y guacamole Sandwich of Two four tortillas filled with ham and cheese. Served with lettuce, sour cream, and guacamole.</string>

    <string name="sopes">Sopes</string>
    <string name="sopes_desc">Tortilla gruesa cubierta de frijoles, tu carne favorita, lechuga, queso fresco y crema Fried thick tortilla with beans, your choice of meat, lettuce, fresh cheese, sour cream and tomatoes</string>

    <string name="tostadas">Tostadas</string>
    <string name="tostadas_desc">Tortilla frita con frijoles, tu carne favorita, lechuga, queso fresco, crema y jitomate Fried tortilla with beans, your choice of meat, lettuce, fresh cheese, sour cream and tomatoes</string>

    <string name="especialidades">Especialidades</string>

    <string name="mojarra">Mojarra Frita - Fried Fish</string>
    <string name="mojarra_desc">Tilapia frita servida con lechiga, cebolla, jitomate, aguacate y tortillas. Fried tilapia served with lettuce, onions, tomatoes, avocado and tortillas.</string>

    <string name="tostadasCev">Tostadas de Ceviche</string>
    <string name="tostadasCev_desc">Tilapia, camarones y pico de gallo servido en una crujiente tostada Tilapia, Shrimp and pico de gallo, served on a crispy shell.</string>

    <string name="fajitaBurrito">Fajita Burrito</string>
    <string name="fajitaBurrito_desc">Gran burrito relleno de tu carne favorita, cebolla, chile, arroz, frijoles y jitomate. Servido con lechuga y guacamole Large burrito filled with your choice of meat, onions, chile, peppers, rice, beans and tomatoes. Served with lettuce guacamole and sour cream.</string>

    <string name="fajitaQuesadilla">Fajita Quesadilla</string>
    <string name="fajitaQuesadilla_desc">Quesadilla extra grande, rellena con tu carne favorita, cebolla asada, chile banana y jitomate. Servida con arroz, frijoles y ensalada Extra large quesadilla with your choice of meat, cooked with grilled onions, banana peppers and tomatoes. Served with rice beans and salad.</string>

    <string name = "tortas">Tortas</string>
    <string name = "tortaRegular">Torta regular</string>
    <string name = "tortaRegular_desc">All tortas come with lettuce, onions, tomatoes, avocado do, sour cream, mayo, jalapeno pepper and your choice of meat. ​</string>
    <string name = "tortaMilanesa">Torta -Milanesa de Res o Pollo</string>
    <string name = "tortaMilanesa_desc">Breaded Steak or Chicken</string>
    <string name = "tortaCubuana">Torta Cubana</string>
    <string name = "tortaCubuana_desc">Chorizo, asada, jamon, pastor y queso Mexican sausage, steak, marinated pork, ham, and cheese</string>
    <string name = "tortaMixta">Torta Mixta</string>
    <string name = "tortaMixta_desc">Chorizo, asada y pastor Mexican sausage, steak and marinated pork</string>


    <string name = "sopas">SOPAS</string>
    <string name = "pozole">Pozole</string>
    <string name = "pozole_desc">Weekends only</string>
    <string name = "menudo">Menudo</string>
    <string name = "menudo_desc">Wednesday to Sunday</string>
    <string name = "caldoRes">Caldo de Res</string>
    <string name = "caldoRes_desc"></string>
    <string name = "caldoCamaron">Caldo de Res</string>
    <string name = "caldoCamaron_desc"></string>
    <string name = "sopaMariscos">Sopa de Mariscos</string>
    <string name = "sopaMariscos_desc">Seafood soup</string>
    <string name = "coctelCamaron">Caldo de Camaron</string>
    <string name = "coctelCamaron_desc">Shrimp soup</string>

    <string name = "combinations">COMBINATIONS</string>
    <string name = "traditionalTacoCombo">Traditional Taco Combo</string>
    <string name = "traditionalTacoCombo_desc">Tortilla de Maiz, tu carne favorita, servido con arroz y frijoles Corn tortilla taco, your choice of meat, served with rice and beans</string>
    <string name = "mexicanBurritos">Mexican Burritos</string>
    <string name = "mexicanBurritos_desc">Your choice of meat on a big burrito made of flour tortilla with rice, beans, lettuce, grilled onions, pico de gallo, guacamole and sour cream.</string>
    <string name = "losPortalesBurrito">Los Portales Burrito</string>
    <string name = "losPortalesBurrito_desc">A flour tortilla wrapped around grilled cactus, steak, pastor, (Seasoned Pork) grilled onions, rice and beans. Served a side of lettuce salad, tomatoes, sour cream and guacamole.</string>
    <string name = "cinco">Cinco</string>
    <string name = "cinco_desc">One hard sell taco with your choice of meat, lettuce and cheese. One burrito with your choice of meat, pico de gallo, sour cream, guacamole and beans. Served with rice and beans.</string>
    <string name = "dosAmigos">Dos Amigos</string>
    <string name = "dosAmigos_desc">Two hard shell tacos with your choice of meat topped with lettuce and shredded cheese. served with a side of rice and beans</string>
    <string name = "burritoPepe">Burrito Pepe</string>
    <string name = "burritoPepe_desc">A flour tortilla wrapped around your choice of meat with beans, lettuce, sour cream, guacamole and pico de gallo. served with a side of rice.</string>


    <string name = "drinks">DRINKS</string>
    <string name = "sodas">Sodas 20 oz.</string>
    <string name = "jarritos">Jarritos</string>
    <string name = "aguasFrescas">Aguas frescas</string>
    <string name = "domesticBeer">Domestic Beer</string>
    <string name = "mexicanBeer">Mexican Beer</string>
    <string name = "micheladas">Micheladas</string>
    <string name = "caguama">Caguama</string>
    <string name = "caguamaMichelada">Caguama Michelada</string>
    <string name = "cubetazos">Cubetazos</string>
    <string name = "lataBeer">Lata Beer</string>
    <string name = "charolazo">Charolazo</string>
    <string name = "carolazoCamarones">Carolazo con camarones</string>
    <string name = "laMamalona">La mamalona</string>
    <string name = "laMamalonaCamarones">La mamalona con camarones</string>
    <string name = "cubetazo">Cubetazo (6 Cervezas)</string>


    <string name="sides">SIDE ORDERS</string>
    <string name="sideGuacamole">Side of Guacamole</string>
    <string name="sideBeans">Side of Beans</string>
    <string name="sideRice">Side of Rice</string>
    <string name="sideChips">Chips and Salsa</string>
    <string name="sideTacos">Flour Tacos</string>


    <string name="botanaC">Botana de Camarones</string>

    <string name="coctelC">Coctel de Camaron</string>

    <string name="caldos">Caldos</string>

    <string name="camaron">Camaron</string>

    <string name="larger">Larger</string>

    <string name="our_menu">Our Menu</string>

    <string name="choiceMeat">Choice of meat</string>
    <string name="tamanio">Tamaño</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

</resources>