<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/first_gradient"
    >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/eslogan"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/menu"/>

</LinearLayout>